<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="bg_login"
        android:foreground="@drawable/fg_black"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/white_theme"
        android:contentDescription="@string/button_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Masuk"
        android:textColor="@color/white_theme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <TextView
        android:id="@+id/tv_describe_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Silahkan masuk untuk melanjutkan"
        android:textColor="@color/white_theme"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
       app:layout_constraintTop_toBottomOf="@id/tv_describe_login"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="Kata Sandi"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:startIconDrawable="@drawable/ic_padlock"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Lupa kata sandi"
        android:textColor="@color/white_theme"
        android:textSize="16sp"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="@id/password_container"
        app:layout_constraintTop_toBottomOf="@id/password_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Masuk"
        android:textAllCaps="false"
        android:textColor="@color/white_theme"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/btn_forgot_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Belum punya akun?"
            android:textColor="@color/white_theme"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="5dp"
            android:text="Buat disini"
            android:textColor="@color/white_theme"
            android:textSize="16sp" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        layout="@layout/loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>