<resources>
    <string name="app_name">TourIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_danau_toba">Danau Toba adalah danau vulkanik terbesar di Indonesia dan juga salah satu danau terbesar di dunia. Terletak di Sumatera Utara, danau ini terbentuk akibat letusan supervulkan sekitar 74.000 tahun yang lalu. Letusan ini mengakibatkan kolapsnya kawah gunung berapi dan membentuk sebuah kaldera raksasa yang kemudian diisi dengan air hujan, membentuk Danau Toba yang kita kenal saat ini.</string>
    <string name="search_less_travel_more">Search less, Travel More!</string>
    <string name="first_onboarding_text">Aplikasi TourIn menyediakan informasi lengkap tentang fasilitas umum dan penyedia layanan di 10 Wisata Bali Baru, memudahkan wisatawan untuk menemukan dan menikmati fasilitas yang dibutuhkan selama perjalanan mereka.</string>
    <string name="second_onboarding_text">10 Wisata Bali Baru merupakan wisata yang kedepannya akan dilakukan pengembangan lebih lanjut oleh pemerintah pariwisata Indonesia. Wisata tersebut antara lain Danau Toba, Tanjung Kelayang, Tanjung Lesung, Kepulauan Seribu, Borobudur, Bromo Tengger Semeru, Mandalika, Labuan Bajo, Wakatobi, dan Morotai.</string>
    <string name="third_onboarding_text">Let the TourIn app will introduce you 10 New Bali Tours.</string>
    <string name="enjoy_your_vacation">Enjoy Your Vacation</string>
    <string name="we_will_guide_you_to_find_public_facilities">We will guide you to find public facilities.</string>
    <string name="let_s_travel">Let’s Travel!</string>
    <string name="discover_new_bali_in_indonesia">Let’s travel to 10 new Bali, Indonesia</string>
    <string name="get_started">Get Started</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="bg_login">bg_login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="candi_borobudur">Candi Borobudur</string>
    <string name="greeting">Good Morning,</string>
    <string name="john_doe">John Doe</string>
    <string name="popular_tour">Popular Tour</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="route">Route</string>
    <string name="example_address">Jl. Badrawati, Kw. Candi Borobudur, Borobudur, Kec. Borobudur, Kabupaten Magelang, Jawa Tengah</string>
    <string name="failed_login">Failed login</string>
    <string name="message">Message</string>
    <string name="error">Error</string>
    <string name="registration_failed">Registration failed</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="all_new_bali_tours">All new bali tours</string>
    <string name="image_profiles">image profiles</string>
    <string name="button_back">button back</string>
    <string name="destination_name">Destination Name</string>
    <string name="my_location">My Location</string>
    <string name="tour_location">Tour Location</string>
    <string name="place_name">Place Name</string>
    <string name="rate_the_place">Sudah mengunjungi tempat tersebut? Silakan menilai tempat itu</string>
    <string name="send">Send</string>
    <string name="background_location_permission_message">
       Enable location background access to get a better experience with the TourIn app
    </string>
    <!--    <string name="service_already_running">Service is already running</string>-->
    <!--    <string name="service_start_successfully">Service started successfully</string>-->
    <string name="gps_enable">GPS enable</string>
    <string name="please_turn_on_gps">Please turn on GPS</string>
    <string name="ok">Ok</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
</resources>