<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_login"
        android:foreground="@drawable/fg_black"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Daftar"
        android:textColor="@color/white_theme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_top" />

    <TextView
        android:id="@+id/tv_describe_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="Buat akun baru"
        android:textColor="@color/white_theme"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_register"
        app:layout_constraintTop_toBottomOf="@id/tv_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="48dp"
        android:hint="Nama Pengguna"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/tv_describe_register"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/username_container"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="Kata sandi"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:startIconDrawable="@drawable/ic_padlock"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="Konfirmasi kata sandi"
        app:boxBackgroundColor="@color/white_theme"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey_theme"
        app:errorEnabled="true"
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        app:startIconDrawable="@drawable/ic_padlock"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/custom_cursor_et"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Daftar"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_theme"
        android:textColor="@color/white_theme"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_container" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btn_regist">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Sudah punya akun?"
            android:textColor="@color/white_theme"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="5dp"
            android:text="Masuk disini"
            android:textColor="@color/white_theme"
            android:textSize="16sp" />
    </LinearLayout>
    <include
        android:id="@+id/loading"
        android:visibility="gone"
        layout="@layout/loading"/>

</androidx.constraintlayout.widget.ConstraintLayout>